--- a/GrupoEmpresarial-war/web/resources/css/componentes.css
+++ b/GrupoEmpresarial-war/web/resources/css/componentes.css
@@ -14,7 +14,10 @@
     text-align: right;
     padding-right: 10px;
     margin-top: 5px;
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
+}
+.valorEtiquetaFormulario{
+    width: 320px;
 }
 
 .cajaPiePagina{
