12-Commit Con la entrega de la bodega de datos, se realizo la primera implementación del llamado de los datos para el grupo empresarial y su respectiva visualización en el formulario. Se crearon las entidades, fachada local y servicio sobre las tablas de: - Identificacion, Novedad, Relacion y Tamañlo.

--- a/GrupoEmpresarial-war/web/resources/css/general.css
+++ b/GrupoEmpresarial-war/web/resources/css/general.css
@@ -2,14 +2,15 @@
     Author     : srojasm
 */
 @font-face {
-    /*font-family: 'DeliciousRoman';
-    src: url("#{resource['font/Delicious-Roman.otf']}");
-    src: url('../font/Delicious-Roman.otf');*/
+    font-family: 'open-sans';
+    src: url("#{resource['font:open-sans/OpenSans-Regular.ttf']}&v=1.1");
 }
 
-body{
-    font-family: Sans-Serif, Arial, Helvetica; 
-    font-size: 0.8em;
+html{
+    font-size: 0.8em !important;
+}
+.ui-widget, .ui-widget .ui-widget {
+    font-family: Sans-Serif,open-sans, Arial, Helvetica !important;
 }
 
 .ui-wizard-step-title{
