17-Commit Ajustes en la visualizaciónd e los reportes y mejoras visuales.

--- a/GrupoEmpresarial-war/web/resources/css/componentes.css
+++ b/GrupoEmpresarial-war/web/resources/css/componentes.css
@@ -26,3 +26,8 @@
     padding: 0px!important;
     border: medium none;
 }
+
+.ui-widget-overlay {
+    background: #484848 none repeat scroll 0 0;
+    opacity: 0.8;
+}
