--- a/GrupoEmpresarial-war/web/resources/css/titulos.css
+++ b/GrupoEmpresarial-war/web/resources/css/titulos.css
@@ -116,3 +116,8 @@
 .texto-derecha{
     text-align: right;
 }
+
+/* TITULO mensaje dialog*/
+.ui-dialog-title {
+    font-size: 1.2em !important;
+}
