--- a/GrupoEmpresarial-war/web/resources/css/titulos.css
+++ b/GrupoEmpresarial-war/web/resources/css/titulos.css
@@ -12,7 +12,8 @@
     margin-bottom: 0.67em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold; 
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 .titulo-right-h1{
     width: 100%;
@@ -23,7 +24,8 @@
     margin-bottom: 0.67em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;   
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 .titulo-center-h1{
     width: 100%;
@@ -34,7 +36,8 @@
     margin-bottom: 0.67em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;  
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 /* Titulo de tamaño H2*/
 .titulo-left-h2{
@@ -46,7 +49,8 @@
     margin-bottom: 0.83em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;  
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 .titulo-right-h2{
     width: 100%;
@@ -57,7 +61,8 @@
     margin-bottom: 0.83em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 .titulo-center-h2{
     width: 100%;
@@ -68,7 +73,8 @@
     margin-bottom: 0.83em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold; 
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 /* Titulo de tamaño H3*/
 .titulo-left-h3{
@@ -80,7 +86,8 @@
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold; 
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 .titulo-right-h3{
     width: 100%;
@@ -91,7 +98,8 @@
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 .titulo-center-h3{
     width: 100%;
@@ -102,7 +110,8 @@
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;
+    font-family: open-sans-bold,Sans-Serif, Arial, Helvetica !important;
+    color: #b6014c;
 }
 
 .texto-centrado{
