--- a/GrupoEmpresarial-war/web/resources/css/componentes.css
+++ b/GrupoEmpresarial-war/web/resources/css/componentes.css
@@ -15,9 +15,29 @@
     padding-right: 10px;
     margin-top: 5px;
     margin-bottom: 10px;
+    width: 300px;
 }
 .valorEtiquetaFormulario{
     width: 420px;
+}
+
+.etiquetaFormularioReporte{
+    float: right;
+    font-weight: bold;
+    text-align: left;
+    width: 50%;
+}
+.valorEtiquetaFormularioReporte{
+    text-align: left;
+    width: 50%;
+}
+
+.etiquetaFormularioAdministracion{
+    display: block;
+    text-align: right;
+    padding-right: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .cajaPiePagina{
