--- a/GrupoEmpresarial-war/web/resources/css/general.css
+++ b/GrupoEmpresarial-war/web/resources/css/general.css
@@ -12,6 +12,16 @@ html{
     font-size: 0.8em !important;
     color:#626262 !important
 }
+
+
+#contenedorCentral{
+    /*padding-left: 5%;
+    padding-right: 10%;*/
+}
+
+
+
+/*Componentes Prime Faces*/
 .ui-widget, .ui-widget .ui-widget {
     font-family: open-sans,Sans-Serif, Arial, Helvetica !important;
 }
@@ -19,23 +29,46 @@ html{
 .ui-wizard-step-title{
     font-size: 1.0em !important;
 }
-
-#top {
-    position: relative;
-    background-color: #ffffff;
-    color: white;
-    padding: 5px;
-    margin: 0px 0px 10px 0px;
+/*Stilo para el contenedor del wizar de los formulariosui-wizard-step-titles ui-helper-reset ui-helper-clearfix*/
+.ui-panel.ui-widget.ui-widget-content.ui-corner-all{
+    border: none;
+}
+/*Propiedades para la barra de estado del componente wizar*/
+.ui-wizard-step-titles.ui-helper-reset.ui-helper-clearfix{
+    background-color: #F5F5F5;
 }
 
-#bottom {
-    position: center;
-    background-color: #a91155;
-    color: white;
-    padding: 5px;
-    margin: 100px 0px 0px 0px;
+/*#wzFormulario .ui-state-default, .ui-widget-content .ui-state-default{*/
+.ui-wizard-step-title.ui-state-default.ui-corner-all{ 
+    background-color: #F5F5F5;
+    background-image: linear-gradient(to bottom, #F5F5F5, #F5F5F5);
+    background-position: 0 center;
+    background-repeat: repeat-x;
+    color: #545555;
+    text-decoration: none;
+    box-shadow:none;
+    text-shadow:none;
+    border: none;
+    border-radius: 0px;
+    cursor: default;
 }
 
+/*#wzFormulario .ui-state-highlight, .ui-widget-content .ui-state-highlight{*/
+.ui-wizard-step-title.ui-state-default.ui-corner-all.ui-state-highlight{
+    background-color: #b6014c;
+    background-image: linear-gradient(to bottom, #b6014c, #b6014c);
+    background-position: 0 center;
+    background-repeat: repeat-x;
+    color: #ffffff;
+    text-decoration: none;
+    box-shadow:none;
+    text-shadow:none;
+    border: none;
+    border-radius: 0px;
+    cursor: default;
+}
+
+/*Describe el color al pasar el puntero del mouse sobre el menu principal*/
 .ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover{
     background-color: #b6014c !important;
     opacity: 0.8;
@@ -45,4 +78,11 @@ html{
     background-repeat: repeat-x;
     color: #ffffff;
     text-decoration: none;
+}
+
+.lineaGradian{
+    /*background-color: #B3B3B3; */
+    border: 0; 
+    height: 1px; 
+    background-image: linear-gradient(to right, rgba(179, 179, 179, 0), rgba(179, 179, 179, 0.75), rgba(179, 179, 179, 0));
 }
