43 Commit -Despues de mucho adelantos, se parametriza la aplicación para iniciar el desarrollo de dos versiones de formularios para la captura de la información de los grupos empresariales, unidades legales y establecimientos. - Se implementa una plantilla sin el menu en la izquierda y se crean perfiles para el uso de esas plantillas

--- a/GrupoEmpresarial-war/web/resources/css/componentes.css
+++ b/GrupoEmpresarial-war/web/resources/css/componentes.css
@@ -55,3 +55,12 @@
 .hide-column-names table thead tr {
     display: none;
 }
+
+/*
+.ui-wizard-nav-back{
+    color: blue !important;
+}
+.ui-wizard-nav-next{
+
+}
+*/
